--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -2,7 +2,8 @@
 
 <div class="contact">
   <p>付莹</p>
-  <p>Application Developer @ThoughtWorks</p>
+  <p>金数据 <%= link_to 'https://jinshuju.net', 'https://jinshuju.net', target: '_blank' %></p>
+  <p>Senior Consultant @ThoughtWorks西安</p>
   <p>M: 186 9187 1906</p>
   <p>E: saharaying[AT]gmail.com</p>
 </div>
