--- a/source/layouts/article_layout.erb
+++ b/source/layouts/article_layout.erb
@@ -2,17 +2,17 @@
 <% wrap_layout :layout do %>
     <% if prev_article = current_article.previous_article %>
         <% link_to prev_article, :id => 'prev', :class => "article-nav" do %>
-            <i class=" icon-caret-left" title="<%= prev_article.title %>" data-toggle="tooltip"></i>
+            <i class="fa fa-caret-left" title="<%= prev_article.title %>" data-toggle="tooltip" data-placement="right"></i>
         <% end %>
     <% end %>
 
     <% if next_article = current_article.next_article %>
         <% link_to next_article, :class => 'article-nav', :id => 'next' do %>
-            <i class=" icon-caret-right" title="<%= next_article.title %>"  data-toggle="tooltip"></i>
+            <i class="fa fa-caret-right" title="<%= next_article.title %>"  data-toggle="tooltip" data-placement="left"></i>
         <% end %>
     <% end %>
 
-    <article class="block clearfix">
+    <article class="clearfix">
       <h3>
         <div class="timestamp"><%= date_display current_article.date %></div>
         <%= current_article.title %>
@@ -35,6 +35,18 @@
       </ul>
 
       <%= yield %>
+
+      <% if prev_article = current_article.previous_article %>
+          <% link_to prev_article, class: 'pull-left' do %>
+              <i class="fa fa-angle-double-left"></i> 上一篇
+          <% end %>
+      <% end %>
+
+      <% if next_article = current_article.next_article %>
+          <% link_to next_article, class: 'pull-right' do %>
+              下一篇 <i class="fa fa-angle-double-right"></i>
+          <% end %>
+      <% end %>
 
       <%= partial "disqus" %>
     </article>
