--- a/source/layout.erb
+++ b/source/layout.erb
@@ -5,42 +5,43 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1'/>
   <meta name="keywords" content="<%= yield_content :keywords %>">
   <% title = yield_content :title %>
-  <title><%= title.present? ? title : current_page.data.title %> - Sahara</title>
+  <title><%= title.present? ? title : current_page.data.title %> | Sahara</title>
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+  <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
   <%= stylesheet_link_tag "all" %>
-  <!--[if lt IE 9]>
-  <%= stylesheet_link_tag "ie" %>
-  <![endif]-->
   <%= javascript_include_tag "html5", "application" %>
 </head>
 <body>
-<div class="container">
-  <header>
-    <div class="clearfix">
-      <div class="cs-text pull-left">
-        <% link_to '/' do %>
-            <span>s</span>
-            <span>a</span>
-            <span>h</span>
-            <span>a</span>
-            <span>r</span>
-            <span>a</span>
-        <% end %>
-      </div>
-      <% unless current_page.path == 'contact.html' %>
-      <ul class="ca-menu small pull-right">
-        <li>
-          <% link_to '/contact.html' do %>
-              <span class="ca-icon">C</span>
-              <div class="ca-content">
-                <h2 class="ca-main">Contact</h2>
-                <h3 class="ca-sub">联系我</h3>
-              </div>
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar_collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/">Sahara</a>
+    </div>
+
+    <div class="collapse navbar-collapse" id="navbar_collapse">
+      <ul class="nav navbar-nav">
+        <li class="<%= 'active' if active_menu? 'hotchpotch' %>"><%= link_to  '什锦杂烩', tag_path('hotchpotch') %></li>
+        <li class="<%= 'active' if active_menu? 'tech' %>"><%= link_to  '技术活呀', tag_path('tech') %></li>
+        <li class="<%= 'active' if active_menu? 'photo' %>"><%= link_to  '美片片儿', "/photos.html" %></li>
+      </ul>
+
+      <ul class="nav navbar-nav navbar-right">
+        <li class="<%= 'active' if current_page.path == 'contact.html' %>">
+          <% link_to  '/contact.html' do %>
+            <i class="fa fa-leaf"></i> Contact Me
           <% end %>
         </li>
       </ul>
-      <% end %>
     </div>
-  </header>
+  </div>
+</nav>
+<div class="container-fluid">
   <%= yield %>
 </div>
 <%= yield_content :scripts %>
