--- a/source/stylesheets/_photos.css.scss
+++ b/source/stylesheets/_photos.css.scss
@@ -2,6 +2,7 @@
   position: relative;
   list-style-type: none;
   margin: 0;
+  padding: 0;
 
   $padding: 6px;
 
@@ -9,7 +10,7 @@
     width: 220px;
     display: none;
     text-align: center;
-    padding: $padding $padding 30px;
+    //padding: $padding $padding 30px;
     background-color: rgba(255, 255, 255, 0.4);
     @include border-radius(2px);
 
@@ -20,23 +21,20 @@
     span {
       position: absolute;
       bottom: 0;
-      left: $padding;
+      left: 0;
       width: 220px;
       text-align: left;
-      padding: 5px 0;
+      padding: 5px;
       color: white;
       text-shadow: 1px 1px 4px rgba(71,80,23,0.3);
     }
 
     &:hover {
-      @include scale(1.2);
-      @include transition(all 0.4s ease-in-out);
+      @include scale(1.1);
+      @include transition(all 0.2s ease-in-out);
       background-color: #f6f6f6;
+      @include box-shadow(0 0 3px 3px white);
       z-index: 100;
-      span {
-        text-shadow: 1px 1px 10px rgba(225, 160, 154, 0.60);
-        color: #e1a09a;
-      }
     }
   }
 }
