--- a/source/tag.html.erb
+++ b/source/tag.html.erb
@@ -5,16 +5,17 @@ per_page: 10
 <% content_for :title, tagname %>
 
 <div class="row">
-  <div class="span8">
+  <div class="col-md-10">
     <% page_articles.each_with_index do |article, i| %>
-        <article class="block clearfix">
+        <article class="clearfix">
           <h4>
             <div class="timestamp"><%= date_display article.date %></div>
             <%= link_to article.title, article %>
           </h4>
           <p><%= article.summary %></p>
-
-          <div class="pull-right"><%= link_to "深入阅读 >>", article %></div>
+          <% if tech_article? article %>
+            <div class="pull-right"><%= link_to "继续阅读 >>", article %></div>
+          <% end %>
         </article>
     <% end %>
 
