add text to index, fix js error

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,2 +1,9 @@
 <% content_for :title, "I'm here" %>
 
+<h2 class="text-center">
+  <i class="fa fa-anchor"></i><br>
+  这里空空如也，
+  <% link_to tag_path('hotchpotch') do %>
+    看看有什么好玩的 <i class="fa fa-angle-double-right"></i>
+  <% end %>
+</h2>
