--- a/source/layout.erb
+++ b/source/layout.erb
@@ -7,8 +7,10 @@
   <% title = yield_content :title %>
   <title><%= title.present? ? title : current_page.data.title %> | Sahara</title>
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
   <%= stylesheet_link_tag "all" %>
-  <%= javascript_include_tag "html5", "application" %>
+  <%= javascript_include_tag "html5", "jquery.wookmark.min" %>
 </head>
 <body>
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
